[레거시 코드 리팩터링 - 3단계] 우가(윤정욱) 미션 제출합니다. (#618)
* refactor: response 시 순환참조 해결

* refactor: 양방향 매핑 제거, 단방향으로만 설정

* refactor: 도메인 패키지 분리

* refactor: Order 와 Table 관 의존성 분리

* refactor: OrderTable 과 TableGroup 의존성 분리

* refactor: MenuProduct 에서 Menu 와 Product 의존성 분리

* chore: Flyway v3 추가

* refactor: 예외 의존성 분리

* refactor: dto 변수명 수정

* refactor: 메소드명 수정

* feat: MenuProduct 예외 추가

* refactor: 리뷰 반영